[package]
name = "solana-block-finder"
version = "0.1.0"
edition = "2021"
authors = ["punishell <punishell@github.com>"]
description = "A tool to find Solana blocks by timestamp"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
